# duckguard

./: .gitignore  404.html  CHANGELOG.md  CODE-REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  TODO-TODAY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
benchmarks/: benchmark.py  results.md
blog/why-we-built-duckguard/: index.html
changelog/: index.html
cli/: index.html
connectors/cloud-storage/: index.html
connectors/databases/: index.html
connectors/files/: index.html
connectors/modern-formats/: index.html
connectors/overview/: index.html
docs/: changelog.md  cli.md  index.md  weekly_article.md
docs/api/: index.md
docs/blog/: why-we-built-duckguard.md
docs/connectors/: cloud-storage.md  databases.md  files.md  modern-formats.md  overview.md
docs/getting-started/: installation.md  quickstart.md  why-duckguard.md
docs/guide/: ai-features.md  anomaly-detection.md  column-validation.md  conditional-checks.md  cross-dataset.md  data-contracts.md  distribution-drift.md  freshness-schema.md  group-by.md  multi-column-checks.md  pii-detection.md  profiling.md  quality-scoring.md  query-checks.md  row-level-errors.md  yaml-rules.md
docs/integrations/: airflow.md  dbt.md  github-actions.md  notifications.md  pytest.md  reports.md
docs/video/: create_polished_gif.py
examples/: colab_quickstart.ipynb  fabric_quickstart.ipynb  generate_report_demo.py  getting_started.ipynb  huggingface_integration.py  kaggle_data_quality.ipynb  kaggle_notebook.ipynb  pytest_example.py
examples/reports/: demo_report.html  demo_report_dark.html
examples/sample_data/: duckguard.yaml  orders.csv
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/why-duckguard/: index.html
guide/ai-features/: index.html
guide/anomaly-detection/: index.html
guide/column-validation/: index.html
guide/conditional-checks/: index.html
guide/cross-dataset/: index.html
launch/: LAUNCH-CHECKLIST.md  README.md  community-outreach.md  competitive-analysis.md  hn-post.md  linkedin-post.md  reddit-post.md  twitter-thread.md
scripts/: demo.sh  setup-and-push.sh
search/: search_index.json
streamlit_app/: app.py  requirements.txt
tests/: conftest.py  test_airflow_integration.py  test_cli.py  test_connectors.py  test_crossref.py  test_dataset.py  test_distribution_drift.py  test_email_notifications.py  test_engine.py  test_freshness.py  test_history.py  test_ml_anomaly.py  test_profiler.py  test_reconciliation.py  test_reports.py  test_schema_history.py
video/: create_article_gif.py  create_polished_gif.py
(+83 files in other folders)
